syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.dto";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message ImageFile {
    Description description = 1;
    google.protobuf.BytesValue data = 2;

    message Description {
        string url = 1;
        google.protobuf.BoolValue original = 2;
        google.protobuf.Int32Value image_size = 3;
        google.protobuf.Int32Value file_size = 4;
    }
}