syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.dto";
option java_multiple_files = true;

import "constant/chat_type.proto";
import "dto/message/message.proto";

message MessagesWithTotal {
    int32 total = 1;
    ChatType chat_type = 2;
    int64 from_id = 3;
    repeated Message messages = 4;
}
