syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.dto";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message UserLocation {
    float latitude = 1;
    float longitude = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.StringValue address = 4;
    google.protobuf.Int64Value timestamp = 5;
}