syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "constant/chat_type.proto";

message CreateMessageRequest {
    ChatType chat_type = 1;
    int64 to_id = 2;
    int64 delivery_date = 3;
    string text = 4;
    repeated bytes records = 5;
    google.protobuf.Int32Value burn_after = 6;
}